--- a/app/templates/tools/index.html
+++ b/app/templates/tools/index.html
@@ -13,6 +13,7 @@
     <div class="tools-hero">
         <p class="eyebrow">Tools Hub</p>
         <h1>Workflow helpers to speed up your day</h1>
+        {% include "partials/_micro_tagline.html" %}
         <p class="lead">Pick a tool to improve your writing and research. New utilities will appear here as they launch.</p>
     </div>
 
